tests/poorly_formed_exports_config_false/poorly_formed_exports_config_false.exp
FLOW STATUS:
Error ------------------------------------------------------------------------------------------------- libs/libs.js:4:3

Cannot resolve name `exports`. [cannot-resolve-name]

   4|   exports.foo = 5;
        ^^^^^^^


Error ---------------------------------------------------------------------------------------- bad-default-export.js:4:3

Exports can only appear at the top level [invalid-export]

   4|   module.exports = 42
        ^^^^^^^^^^^^^^



Found 2 errors
FLOW CHECK-CONTENTS:
Error ---------------------------------------------------------------------------------------- bad-default-export.js:4:3

Exports can only appear at the top level [invalid-export]

   4|   module.exports = 42
        ^^^^^^^^^^^^^^



Found 1 error
